--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jonas Joehnk
 email: jonasjoehnk94@gmail.com
 url: https://jjoehnk.github.io
-description: #"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: Data Analyst Project Portfolio
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
