--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jonas Joehnk
 email: jonasjoehnk94@gmail.com
 url: https://jjoehnk.github.io
-description: Data Analyst Project Portfolio
+description: Data Analyst
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
