--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Data Analyst
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary-dark: '#000000'
+  primary-dark: '#014D4E'
   links: '#219ab3'
 
 # Footer settings
